# ai_scanner

./: .gitignore  APP_TUTORIAL.md  DEPLOYMENT.md  GO_LIVE.md  README.md  __init__.py  app.py  breakout_momentum.csv  breakout_results.csv  breakout_results_hot.csv  breakout_results_sp500.csv  breakout_results_under15.csv  config.py  logger.py  main.py  market_data.py  ml_prebreakout.py  nasdaq.txt  otc.txt  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-extended.txt  requirements-ml.txt  requirements.txt  scheduler.py  sp500.txt  sp600.txt  telemetry.py  universe.py  universe.txt
.claude/: launch.json
.streamlit/: config.toml  secrets.toml.example
analytics/: __init__.py  alert_outcomes.py  signal_leaderboard.py  track_record.py
auth/: __init__.py  tier_sync.py  tiering.py  tiering_fallback.py  tiering_utils.py
billing_service/: main.py  realtime_alerts.py  requirements.txt
data/: __init__.py  alpaca_config.py  alpaca_trading.py  earnings_sources.py  fetch.py  filters.py  market.py  price_alpaca.py  price_utils.py  prices.py  provider_diagnostics.py  symbols.py  yf_adapters.py
db/: __init__.py  ai_confidence_models.py  ai_usage.py  alert_outcomes.py  alerts.py  core.py  earnings.py  email_verification.py  engine.py  paper_events.py  paper_trading.py  password_reset.py  prebreakout_models.py  prices.py  runs.py  schema.py  secret_box.py  sessions.py  signal_leaderboard.py  track_record.py  trades.py  universe.py  user_settings.py  users.py  watchlists.py
jobs/: daily_snapshot.py
pages/: _checkout_cancel.py  alerts.py  billing.py  checkout_success.py  day_trader.py  go_stripe.py  reset_password.py  verify_email.py
scan/: __init__.py  ai_confidence.py  breakout.py  engine.py  execution.py  gap_unusual.py  headless_common.py  indicators.py  options.py  pre_post.py  ranking.py  session.py  strategies.py  universe_selection.py
scheduler/: __init__.py  alert_runner.py  cron_runner.py  evening_wrap.py  jobs.py  morning_digest.py  ui.py
scripts/: deployment_doctor.py  diag_digest_gappers.py  diag_max_scores.py  diag_premarket_scan.py  diag_price_cache.py  diag_track_entry.py  refresh_sp500.py  save_ai_confidence_model.py  streamlit_browser_flow.py  streamlit_smoke.py  test_alpaca.py  train_ai_confidence_model.py
(+157 files in other folders)
